<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- LOGIN -->
    <string name="app_name">Tarea1Moviles</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="btn_login">Iniciar Sesión</string>
    <string name="btn_login_google">Iniciar Sesión en Google</string>
    <string name="register_question">¿No tienes cuenta? Crear una</string>
    <string name="login_incorrect">Usuario o contraseña incorrectos</string>
    <string name="login_correct">Login correcto</string>
    <string name="google_not_implemented">Funcionalidad no implementada aún</string>

    <!-- REGISTRO -->
    <string name="register_title">Registro</string>
    <string name="hint_email">Email</string>
    <string name="hint_birthdate">Fecha de nacimiento</string>
    <string name="hint_confirm_password">Repetir contraseña</string>
    <string name="btn_create_account">Crear cuenta</string>
    <string name="register_success">Cuenta creada correctamente</string>
    <string name="error_passwords_not_match">Las contraseñas no coinciden</string>

</resources>
